--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #Gradle properties
 #Thu Oct 21 11:02:56 BRT 2021
-quarkusPluginVersion=2.6.1.Final
+quarkusPluginVersion=2.7.0.Final
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPluginId=io.quarkus
-quarkusPlatformGroupId=io.quarkus.platform
-quarkusPlatformVersion=2.6.1.Final
+quarkusPlatformGroupId=io.quarkus
+quarkusPlatformVersion=2.7.0.Final
