--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mp.messaging.connector.smallrye-kafka.group.id=${KAFKA_GROUP_ID:app}
 
 mp.messaging.connector.smallrye-kafka.security.protocol=SASL_PLAINTEXT
 mp.messaging.connector.smallrye-kafka.ssl.endpoint.identification.algorithm=https
-mp.messaging.connector.smallrye-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="${KAFKA_USERNAME:user}" password="${KAFKA_PASSWORD:bitnami}";
+mp.messaging.connector.smallrye-kafka.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="${KAFKA_USERNAME:user}" password="${KAFKA_PASSWORD:bitnami}";
 mp.messaging.connector.smallrye-kafka.sasl.mechanism=PLAIN
 
 mp.messaging.incoming.process-status-in.connector=smallrye-kafka
